# claude-code-use

./: .gitignore  AGENT-CHEATSHEET.ko.md  AGENT-CHEATSHEET.md  CLAUDE.ko.md  CLAUDE.md  CONTRIBUTING.ko.md  CONTRIBUTING.md  Containerfile  INTEGRATION.ko.md  INTEGRATION.md  LICENSE  Makefile  README.ko.md  README.md  SETUP.ko.md  SETUP.md  install.sh  setup-agents.ps1  setup-agents.sh
.claude/commands/: cost.md  handoff.md  harness.md  pipeline.md  remind.md  review-diff.md  snippet.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
agents/: 00-orchestrator.md  01-planner.md  02-implementer.md  03-reviewer.md  04-tester.md  05-security-auditor.md  06-performance-optimizer.md  07-database-expert.md  08-documenter.md  09-harness-designer.md  10-pipeline-orchestrator.md
docs/: AGENT-CHEATSHEET.ko.md  AGENT-CHEATSHEET.md  CLAUDE.ko.md  CLAUDE.md  CONTRIBUTING.ko.md  CONTRIBUTING.md  HARNESS-GUIDE.ko.md  HARNESS-GUIDE.md  INTEGRATION.ko.md  INTEGRATION.md  SETUP.ko.md  SETUP.md
rust/: Cargo.toml
rust/claude-tools/: Cargo.toml
rust/claude-tools/src/: colors.rs  cost.rs  env.rs  handoff.rs  main.rs  snippet.rs  watch.rs
scripts/: dogfood-build.sh  fmt.sh  validate-agents.sh
snippets/: defaults.json
tools/: claude-cost.py  claude-handoff.py  claude-harness.py  claude-pipeline.py  claude-remind.py  claude-review-diff.py  install-snippet.ps1  install-snippet.sh  install-tools.ps1  install-tools.sh  snippet.py
