[package]
name = "claude-tools"
version = "1.0.0"
edition = "2021"
description = "Claude Code productivity CLI: snippet manager, session handoff, cost estimator"
authors = ["BcKmini"]
license = "MIT"
repository = "https://github.com/BcKmini/Claudecode-Agent"
keywords = ["claude", "cli", "ai", "productivity"]
categories = ["command-line-utilities"]

[[bin]]
name = "claude-tools"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
anyhow = "1"
regex = "1"
